@@ -4276,32 +4276,12 @@ init|(
 name|this
 init|)
 block|{
-try|try
-block|{
-name|ExecutorUtil
-operator|.
-name|shutdownNowAndAwaitTermination
-argument_list|(
 name|recoveryExecutor
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-name|SolrException
 operator|.
-name|log
-argument_list|(
-name|log
-argument_list|,
-name|e
-argument_list|)
+name|shutdown
+argument_list|()
 expr_stmt|;
-block|}
+comment|// no new tasks
 comment|// Don't delete the old tlogs, we want to be able to replay from them and retrieve old versions
 name|doClose
 argument_list|(
@@ -4351,6 +4331,32 @@ name|log
 operator|.
 name|forceClose
 argument_list|()
+expr_stmt|;
+block|}
+try|try
+block|{
+name|ExecutorUtil
+operator|.
+name|shutdownNowAndAwaitTermination
+argument_list|(
+name|recoveryExecutor
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|SolrException
+operator|.
+name|log
+argument_list|(
+name|log
+argument_list|,
+name|e
+argument_list|)
 expr_stmt|;
 block|}
 block|}
